--- a/NetExplorer/templates/NetExplorer/smesgene_card.html
+++ b/NetExplorer/templates/NetExplorer/smesgene_card.html
@@ -71,7 +71,7 @@
         {% endif %}
     </b><br><br>
 
-    <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.symbol }}&tracks=Smes_g4_scaffolds,SmesG_v2_genes,Dresden.v6 Transcripts&overview=1&highlight=&tracklist=1&highres=2"></iframe>
+    <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.symbol }}&tracks=Smes_g4_scaffolds,SmesG_v2_genes,Dresden.v6 Transcripts&overview=1&highlight=&tracklist=1&highres=2&fullviewlink=1"></iframe>
     <!--<iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.chromosome }}%3A{{ node.start }}..{{ node.end }}&tracks=refseq%2Cgenes&overview=1&highlight=&tracklist=0&highres=2"></iframe> -->
 
     <h2><span class="glyphicon glyphicon-tag"></span> Transcripts</h2>
