--- a/NetExplorer/templates/NetExplorer/contig_card.html
+++ b/NetExplorer/templates/NetExplorer/contig_card.html
@@ -160,7 +160,9 @@
                         <h2><span class="glyphicon glyphicon-tag"></span> Genomic location</h2>
                         <hr class="h2-sep">
                             
-                        {% if node.database == "Smest" or node.database == "Dresden" %}
+                        {% if node.database == "Smest" %}
+                        <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.symbol }}&tracks=Smes_g4_scaffolds,SmesG_v2_genes,Dresden&overview=1&highlight=&tracklist=1&highres=2&fullviewlink=1"></iframe>
+                        {% elif node.database == "Dresden" %}
                             <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.symbol }}.path1&tracks=Smes_g4_scaffolds,SmesG_v2_genes,Dresden&overview=1&highlight=&tracklist=1&highres=2&fullviewlink=1"></iframe>    
                         {% else %}
                             <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.symbol }}.path1&tracks=Smes_g4_scaffolds,SmesG_v2_genes,Dresden,{{ node.database }}&overview=1&highlight=&tracklist=1&highres=2&fullviewlink=1"></iframe>
