--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -411,8 +411,13 @@
     <script src="{% static 'js/cytoscape-dagre.js' %}"></script>
     <script src="{% static 'js/cytoscape-cola-min.js' %}"></script>
     <script src="{% static 'js/cy-editor.js' %}"></script>
+    <script src="{% static 'js/autocomplete.js' %}"></script>
     <script src="{% static 'js/planexp.js' %}"></script>
     <script src="{% static 'js/planexp-cytoscape-definition.js' %}"></script>
+
+    <script>
+        
+    </script>
     {% endblock scripts%}
     
 
