--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2520,4 +2520,5 @@ summary { display: list-item !important; }
     overflow-x: hidden;
     /* add padding to account for vertical scrollbar */
     padding-right: 20px;
+    z-index: 2147483647;
 } 
