--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -131,8 +131,8 @@
                 <br>
                 <label for="gene-expression-plot-type">Plot:</label><br>
                 <select id="gene-expression-plot-type" name="gene-expression-plot-type" class="selectpicker" title="Select Plot">
-                        <option value="violin" selected>Violin/Bar Plot</option>
-                        <option value="heatmap">HeatMap</option>
+                    <option value="heatmap" selected>Heat Map</option>
+                        <option value="violin">Violin-Bar Plot</option>
                 </select>
                 <div id="plot-container">
                     <div id="plot-genenotfound">
