--- a/NetExplorer/templates/NetExplorer/base.html
+++ b/NetExplorer/templates/NetExplorer/base.html
@@ -61,8 +61,9 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a href="{% url 'gene_search' %}">Gene Search</a></li>
-                                    <li><a href="{% url 'blast' %}">Blast</a></li>
                                     <li><a href="{% url 'net_explorer' %}">Net Explorer</a></li>
+                                    <li><a href="/jbrowse/">Gene Browser</a></li>
+                                    <li><a href="{% url 'blast' %}">Blast</a></li>
                                     <li><a href="{% url 'path_finder' %}">Pathway Finder</a></li>
                                     {% if user.is_authenticated %}
                                     <li><a href="{% url 'planexp' %}">PlanExp</a></li>
