--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -2131,6 +2131,15 @@ kbd {
     font-size: 12px;
 }
 
+#planexp-links-table {
+    color: #777777;
+    font-size: 12px;
+}
+
+#planexp-links blockquote {
+    font-size: 14px !important;
+}
+
 #select-dataset { display: none; }
 #planexp-gene-expression { display: none; }
 .gene-expression-search-container { width: 50%; }
@@ -2236,7 +2245,11 @@ kbd {
     background: #E7E7E7;
 }
 
+
 .plot-tsne-btn    { margin-top: 20px; width: 125px; }
+
+#planexp-links { display: none; }
+
 
 #planexp-toc {
     padding: 8px;
@@ -2269,6 +2282,8 @@ kbd {
 
 #planexp-network     { display: none; }
 #planexp-network-toc { display: none; }
+#planexp-links-toc { display: none; }
+
 #planexp-cyt { background-color: #f4f4f4; width: 100%; height: 720px;}
 
 #planexp-cyt-wrapper {
