--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -452,6 +452,7 @@
     <script src="{% static 'js/cytoscape-cola-min.js' %}"></script>
     <script src="{% static 'js/cy-editor.js' %}"></script>
     <script src="{% static 'js/autocomplete.js' %}"></script>
+    <script src="{% static 'js/get-card.js' %}"></script>
     <script src="{% static 'js/planexp.js' %}"></script>
     <script src="{% static 'js/planexp-cytoscape-definition.js' %}"></script>
 
