--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -228,12 +228,12 @@
 
 
             <div id="planexp-links" class="planexp-card">
-                <h2 id="planexp-title">Regulatory Interactions</h2>
+                <h2 id="planexp-title">Gene Regulatory Interactions</h2>
                 <hr class="planexp-rule">
 
                 <blockquote>
-                    Predicted gene regulations for this experiment 
-                    using <a target="_blank" href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0012776">GENIE3 (Huynh-Thu VA <i>et al</i>.)</a>.
+                    Predicted gene interactions for this experiment 
+                    using <a target="_blank" href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0012776">GENIE3 (Huynh-Thu, VA <i>et al</i>.)</a>.
 
                     <br><br>
                     Possible regulators were selected by Gene Ontology (those genes having a GO accession indicating that they are transcription factors), 
