--- a/NetExplorer/templates/NetExplorer/regulatory_links_table.html
+++ b/NetExplorer/templates/NetExplorer/regulatory_links_table.html
@@ -4,10 +4,15 @@
     <table id="planexp-links-table" class="table table-hover">
         <thead>
             <tr>
-                <th>Regulator</th>
+                <th colspan="3" class="planexp-links-table-group">Regulator</th>
+                <th colspan="3" class="planexp-links-table-group">Target</th>
+                <th colspan="2" class="planexp-links-table-group">Interaction</th>
+            </tr>
+            <tr>
+                <th>Regulator id</th>
                 <th>Regulator gene</th>
                 <th>Regulator homolog</th>
-                <th>Target</th>
+                <th>Target id</th>
                 <th>Target gene</th>
                 <th>Target homolog</th>
                 <th>Score</th>
